fixed the shifting of the menu bar for contact and sign up page

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,11 @@ html, body {
     height: 100vh;
 }
 
+html {
+    scrollbar-gutter: stable;
+    overflow-y: scroll;
+}
+
 body {
     display: flex;
     flex-direction: column;
@@ -455,7 +460,7 @@ main {
     display: flex;
     flex-direction: row;
     gap: 20px;
-    padding: 20px 20px;
+    padding: 20px;
     max-width: 1200px;
     margin: 0 auto;
 }
